--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro&family=Poppins:ital@1&display=swap"
+        rel="stylesheet">
     <title>my-portfolio</title>
 </head>
+
 <body>
-    
+
+    <section class="my-blog">
+
+        <div class="my-portfolio">
+            <h1>Welcome To</h1>
+            <h1><span class="sabbir">Sabbir Rahman</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores eligendi corrupti excepturi quas
+                vero
+                optio doloremque quis beatae non odio, eius velit iste delectus quaerat amet! Ut natus hic voluptate
+                sed
+                eaque
+                iure at? Perspiciatis aperiam porro voluptatibus iure nisi?</p>
+
+            <a class="link" href="https://www.google.com">Hire Me</a>
+        </div>
+        <div class="img">
+            <img src="my-show-off/sabbir.png" alt="">
+
+        </div>
+
+    </section>
+
+
 </body>
+
 </html>
