--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <h1>Welcome To</h1>
             <h1><span class="sabbir">Sabbir Rahman</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores eligendi corrupti excepturi quas
+            <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores eligendi corrupti
+                excepturi quas
                 vero
                 optio doloremque quis beatae non odio, eius velit iste delectus quaerat amet! Ut natus hic voluptate
                 sed
@@ -31,7 +32,7 @@
             <a class="link" href="https://www.google.com">Hire Me</a>
         </div>
         <div class="img">
-            <img src="my-show-off/sabbir.png" alt="">
+            <img class="img-2" src="my-show-off/sabbir.png" alt="">
 
         </div>
 
