--- a/index.html
+++ b/index.html
@@ -37,7 +37,42 @@
         </div>
 
     </section>
+    <section class="my-blog-2">
+        <div>
+            <img class="img-3" src="my-show-off/sabbir2.png" alt="">
+        </div>
+        <div class="dream-big">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis iusto, explicabo vel sint dolor
+                assumenda beatae illo, temporibus sit accusantium est! Voluptatem cum libero totam similique soluta
+                tempora laudantium, officiis quasi veniam magnam fugiat quas, facilis eum aperiam et. Laborum.</p>
+            <a class="link" href="https://www.google.com">DOWNLODE-RUSUMI</a>
+        </div>
+    </section>
+    <h1>Experiences</h1>
 
+    <section class="my-blog-3">
+        <div class="full-stack">
+            <h1>
+                Full Stack Web Developer
+            </h1>
+            <h3 class="present">2021-Present | Pro Level Developer</h3>
+            <p>
+                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </p>
+        </div>
+        <div class="baby-web">
+            <h1>Baby Web Developer</h1>
+            <h3 class="present">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+
+    <footer class="footer-name">© Peter Parker 2023, a Programming Hero initiative.</footer>
 
 </body>
 
